code/typescript/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/CostImpactV3.md
# bestexecutionanalyticsforsmartertradingbeast.CostImpactV3

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**strategy** | **String** | Strategy | [optional] 
**riskAversion** | **Number** | RiskAversion | [optional] 
**marketImpactStatus** | **String** | MarketImpactStatus | [optional] 
**message** | **String** | Message | [optional] 
**costPerShare** | **Number** | Cost Per Share | [optional] 
**costPerShareBps** | **Number** | Cost Per Share Bps | [optional] 
**marketImpact** | **Number** | Market Impact | [optional] 
**confidenceInterval** | **Number** | Confidence Interval | [optional] 
**confidenceIntervalBps** | **Number** | Confidence Interval Bps | [optional] 
**liquidityCostPerShare** | **Number** | Liquidity Cost Per Share | [optional] 
**spreadCostPerShare** | **Number** | Spread Cost Per Share | [optional] 
**liquidityCostPerShareBps** | **Number** | Liquidity Cost Per Share Bps | [optional] 
**spreadCostPerShareBps** | **Number** | Spread Cost Per Share Bps | [optional] 
**outputStrategyBinDataDtoList** | [**[OutputStrategyBinData]**](OutputStrategyBinData.md) | Output Strategy Bin Data List | [optional] 


